--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Jeff Trottier. It uses data from mapbox.com and Weatherstack.com.</p>
         <img class="portrait" src="/img/robot.png">
     </div>
     
